<resources>
    <string name="app_name">Bits</string>
    <string name="bits">bits</string>
    <string name="intro">The best learner\'s companion</string>
    <string name="question">What level of comfortability do you have with inter-number system conversions?</string>
    <string name="first_option">I do not have any prior knowledge about numbering systems. I wish to learn about the different types of number systems and
    inter-number system conversions.</string>
    <string name="second_option">I am completely well-versed with the concept of number systems but have a vague understanding
    about inter-number system conversion. I want to learn about the conversions.</string>
    <string name="third_option">I have good knowledge about the number systems and proficient in inter-number systems conversions. I am up for the
    challenge.</string>
    <string name="fourth_option">Nah, I prefer the easy way. Take me to the conversion tab.</string>
    <string name="trans_name">bits</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="learners_disney">Take me to Learner\'s Disney</string>
    <string name="number_system">
    A number is a collection of symbols. Each symbol\'s value is a function of the type
    of the system and its position. Number systems are positional because the value of the symbol depends upon its position.
    \n\nThe number is represented as\n\t\t
    <center>( S<sub><small>n-1</small></sub>S<sub><small>n-2</small></sub>...S<sub><small>1</small></sub>S<sub><small>0</small></sub><b>.</b>
        S<sub><small>-1</small></sub>S<sub><small>-2</small></sub>...S<sub><small>-m</small></sub>)<sub><small>b</small></sub></center>
        \n\twhere b = radix or base of the number system
        \n\tn = number of digits in the integer part
        \n\tm = number of digits in the fractional part
        \n\tS<sub><small>n-1</small></sub> = most significant digit
        \n\tS<sub><small>-m</small></sub> = least significant digit.
        \n\nOn the basis of number of symbols and radix, number systems are classifed as:-
        \n(i) decimal number system
        \n(ii) binary number system
        \n(iii) octal number system and
        \n(iv) hexadecimal number system.
    </string>
    <string name="decimal_explanation">
    In the decimal number system, the total number of symbols are ten. They are:- 0, 1, 2, 3, 4, 5, 6, 7, 8 and 9;
    the base is 10, and the radix point is known as the decimal point. The digits at the left side of the decimal point constitute
    the integer part and the digits at the right side of the decimal point constitute the fractional part. The value of a digit is the
    function of its position in a number. The left most digit has the maximum value, hence it is known as the most significant digit (MSD).
    The right most digit has the minimum value and hence it is known as the least significant digit (LSD).
    \n\nFor example,\n(555.55)<sub><small>10</small></sub> = 5 "\u00d7" 10<sup><small>2</small></sup> + 5 "\u00d7" 10<sup><small>1</small></sup>
     + 5 "\u00d7" 10<sup><small>0</small></sup> + 5 "\u00d7" 10<sup><small>-1</small></sup> + 5 "\u00d7" 10<sup><small>-2</small></sup></string>
    <string name="binary_explanation">
    In the binary number system, the total number of symbols are two i.e. 0 and 1. The base is 2 and the radix point is known as the
    binary point. These symbols are known as bits (abbreviated from binary digits). It is a positional number system; the weight of a bit
    is defined by its position with base 2.\n\n
    For example,\n
    (111.11)<sub><small>2</small></sub> = 1 "\u00d7" 2<sup><small>2</small></sup> + 1 "\u00d7" 2<sup><small>1</small></sup> + 1 "\u00d7" 2<sup><small>0</small></sup> + 1 "\u00d7" 2<sup><small>-1</small></sup>+ 1 "\u00d7" 2<sup><small>-2</small></sup></string>
    <string name="octal_explanation">
    The number system with base 8 is known as the octal number system. Eight symbols are use to represent numbers in the system, and these are:
     0, 1, 2, 3, 4, 5, 6 and 7. In the octal number system, the radix point is known as the octal point. It is a positional number system; the weight of a digit is defined by
    its position with base 8.\n\n
    For example,\n
    (576.217)<sub><small>8</small></sub> = 5 "\u00d7" 8<sup><small>2</small></sup> + 7 "\u00d7" 8<sup><small>1</small></sup> + 6 "\u00d7" 8<sup><small>0</small></sup> +
    2 "\u00d7" 8<sup><small>-1</small></sup> + 1 "\u00d7" 8<sup><small>-2</small></sup> + 7 "\u00d7" 8<sup><small>-3</small></sup></string>
    <string name="hexadecimal_explanation">
    The number system with base 16 is known as the hexadecimal number system. In the hexadecimal number system,
    16 symbols are used to represent the numbers and these symbols are: 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, A, B, C, D, E and F.
    The letters A, B, C, D, E, F corresponds to the decimal numbers 10, 11, 12, 13, 14 and 15. In the hexadecimal number system,
    the radix point is known as the hexadecimal point. It is a positional number system; the weight of the digit is defined by its position with base 16.\n\n
    For example,\n
    (15A.26)<sub><small>16</small></sub> = 1 "\u00d7" 16<sup><small>2</small></sup> + 5 "\u00d7" 16<sup><small>1</small></sup> +
    10 "\u00d7" 16<sup><small>0</small></sup> + 2 "\u00d7" 16<sup><small>-1</small></sup> + 6 "\u00d7" 16<sup><small>-2</small></sup></string>
    <string name="decimal_to_binary">Decimal to Binary</string>
    <string name="easy1">1. The base of hexadecimal number system is:</string>
    <string name="easy2">2. Which is typically the longest: bit, byte, nibble, word?</string>
    <string name="easy3">3. What decimal number does 2<sup><small>5</small></sup> represent?</string>
    <string name="easy4">4. Digital electronics are based on the ______ numbering system.</string>
    <string name="easy5">
        5. A complete alphanumeric code would include 26 lowercase letters, 25 uppercase letters, 10 numeric digits, 7 punctuation
        marks, and anywhere from ____ to ____ other characters.
    </string>
    <string name="easy6">
        6. Each position in a decimal multidigit number will have a weighting factor based on a power of only 10.
    </string>
    <string name="easy7">7. Decimal 12 is ____ in hexadecimal</string>
    <string name="easy7AnsOne">12<sub><small>16</small></sub></string>
    <string name="easy7AnsTwo">C<sub><small>16</small></sub></string>
    <string name="easy7AnsThree">A2<sub><small>16</small></sub></string>
    <string name="easy7AnsFour">A<sub><small>16</small></sub></string>
    <string name="easy8">8. Each hexadecimal digit converts to ____ binary digits.</string>
    <string name="_15">15</string>
    <string name="_9">9</string>
    <string name="_16">16</string>
    <string name="_12">12</string>
    <string name="bit">Bit</string>
    <string name="bytes">Byte</string>
    <string name="nibble">Nibble</string>
    <string name="word">Word</string>
    <string name="_10">10</string>
    <string name="_31">31</string>
    <string name="_25">25</string>
    <string name="_32">32</string>
    <string name="octal">octal</string>
    <string name="binary">binary</string>
    <string name="hexadecimal">hexadecimal</string>
    <string name="_10_20">10, 20</string>
    <string name="_20_40">20, 40</string>
    <string name="tru">True</string>
    <string name="fal">False</string>
    <string name="four">Four</string>
    <string name="eight">Eight</string>
    <string name="twelve">Twelve</string>
    <string name="six">Six</string>
    <string name="msb">MSB</string>
    <string name="lsb">LSB</string>
    <string name="advanced1">1. Convert 8B3F<sub><small>16</small></sub> to binary.</string>
    <string name="advanced2">2. The sum of 11101 + 10111 equals _____ .</string>
    <string name="advanced3">3. A decimal fraction can be converted to binary by using division-by-2 method.</string>
    <string name="advanced4">4. When using repeated division by 2 method of converting from binary to decimal, one must write the first remainder as the:</string>
    <string name="advanced5">5. Convert the binary number 1100 to Gray code.</string>
    <string name="advanced6">6. What is the difference between binary coding and binary-coded-decimal?</string>
    <string name="advanced7">7. In binary, the decimal 93 converts to _____ digits.</string>
    <string name="advanced8">8. The 2\'s complement of the binary number 1000 is _____ .</string>
    <string name="_1000">1000</string>
    <string name="_1110">1110</string>
    <string name="_0110">0110</string>
    <string name="_111">111</string>
    <string name="five">five</string>
    <string name="eleven">eleven</string>
    <string name="seven">seven</string>
    <string name="binary_coding_is_pure_binary">Binary coding is pure binary.</string>
    <string name="bcd_has_no_decimal_format">BCD has no decimal format.</string>
    <string name="binary_coding_has_a_decimal_format">Binary coding has a decimal format.</string>
    <string name="bcd_is_pure_binary">BCD is pure binary.</string>
    <string name="_1001">1001</string>
    <string name="_1100">1100</string>
    <string name="_1010">1010</string>
    <string name="_0011">0011</string>
    <string name="lsb_provided_the_final_remainder_is_used_to_replace_the_original_lsb_which_is_then_moved_to_the_msb_position">LSB, provided the final remainder is used to replace the original LSB, which is then moved to the MSB position.</string>
    <string name="msb_providing_the_follwing_sequences_of_remainders_are_written_in_the_descending_order_until_the_final_remainder_is_achieved">MSB, providing the follwing sequences of remainders are written in the descending order until the final remainder is achieved.</string>
    <string name="_100100">100100</string>
    <string name="_110100">110100</string>
    <string name="_100001">100001</string>
    <string name="_110011">110011</string>
    <string name="_1000101100111111">1000101100111111</string>
    <string name="_1011001111100011">1011001111100011</string>
    <string name="_011010">011010</string>
    <string name="_35647">35647</string>
    <string name="submit">Submit</string>
</resources>